Add stack setup

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,4 +14,5 @@ jobs:
           enable-stack: true
           stack-no-global: true
           stack-setup-ghc: true
+      - run: stack setup
       - run: stack test
